--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
 
     <!-- fontawesome elements -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
 
     <!-- Link Swiper's CSS -->
@@ -145,46 +145,18 @@
     </div>
 </div> 
 
-
-<div class="form-pricing">
-    <div class="form-pricing container">
-        <form onsubmit="contact(event)">
-            
-            <div class="we-need-section">
-                <div class="we-need-section container">
-                    <div class="we-need-para">
-                        <p>What Design We Need To Do For You</p>
-                    </div>
-                </div>
-            </div>
-
-
-            <label for="fname">Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-            <label for="Email">Email</label>
-            <input type="text" id="Email" name="email" placeholder="Your Email..">
-
-            <label for="Call">Contact Number</label>
-            <input type="text" id="Call" name="call" placeholder="Your Number..">
-
-            <label for="country">Get A Quote For</label>
-            <select id="country" name="country">
-                <option value="" disabled selected>Select an option</option>
-                <option value="Logo Design">Logo Design</option>
-                <option value="Branding">Branding</option>
-                <option value="Packaging Designing">Packaging Designing</option>
-                <option value="Print & Digital Media Designs">Print & Digital Media Designs</option>
-                <option value="Web Designs">Web Designs</option>
-                <option value="Video Editing">Video Editing</option>
-                <option value="Digital Marketing">Digital Marketing</option>
-            </select>
-
-            <label for="subject">Subject</label>
-            <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-            <input type="submit" value="Submit">
-        </form>
+<div class="portImage-container" style="background-color: #303030;">
+    <div class="container d-flex flex-column justify-content-center gap-2">
+        <img src="assets/images/portfolio/1-01.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/2-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/3-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/4-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/5-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/6-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/7-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/8-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/9-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/10-02.webp" width="100%" alt="portfolio">
     </div>
 </div>
 
