--- a/portfolio.html
+++ b/portfolio.html
@@ -146,17 +146,17 @@
 </div> 
 
 <div class="portImage-container" style="background-color: #303030;">
-    <div class="container d-flex flex-column justify-content-center gap-2">
-        <img src="assets/images/portfolio/1-01.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/2-02.webp" width="100%" alt="portfolio">
+    <div class="container d-flex flex-column justify-content-center">
+        <img src="assets/images/portfolio/10-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/9-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/8-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/7-02.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/3-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/2-02.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/4-02.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/5-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/1-01.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/6-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/7-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/8-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/9-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/10-02.webp" width="100%" alt="portfolio">
     </div>
 </div>
 
