--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
 </div> 
 
 <div class="portImage-container" style="background-color: #303030;">
-    <div class="container d-flex flex-column justify-content-center">
+    <div class="d-flex flex-column justify-content-center">
         <img src="assets/images/portfolio/10-02.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/9-02.webp" width="100%" alt="portfolio">
         <img src="assets/images/portfolio/8-02.webp" width="100%" alt="portfolio">
