--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,6 @@
     <!-- fontawesome elements -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
-
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <!-- Lightbox Element  -->
@@ -36,6 +35,9 @@
 </head>
 
 <body>
+<div class="cursor-1"></div>
+
+
    <!-- Top of nav start -->
 
    <section class="top-nav">
@@ -147,16 +149,16 @@
 
 <div class="portImage-container" style="background-color: #303030;">
     <div class="d-flex flex-column justify-content-center">
-        <img src="assets/images/portfolio/10-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/9-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/8-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/7-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/3-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/2-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/4-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/5-02.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/1-01.webp" width="100%" alt="portfolio">
-        <img src="assets/images/portfolio/6-02.webp" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/10-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/9-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/8-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/7-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/3-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/2-02.webp" class="reveal"width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/4-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/5-02.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/1-01.webp" class="reveal" width="100%" alt="portfolio">
+        <img src="assets/images/portfolio/6-02.webp" class="reveal" width="100%" alt="portfolio">
     </div>
 </div>
 
@@ -227,7 +229,6 @@
 
 </footer>
 
-<div class="cursor-1"></div>
 
 
 
