--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
                         your brand through great design that delivers.
 
                     </p>
-                    <button class="button"><strong>Know More</strong></button>
+                    <!-- <button class="button"><strong>Know More</strong></button> -->
                 </div>
 
             </div>
