--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="assets/css/lightbox.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    
+
 </head>
 
 <body>
@@ -175,6 +175,8 @@
                         aria-labelledby="pills-frontend-tab" tabindex="0">
 
                         <div class="tab-boxs">
+                            <h2 style="color: #fff;" class="text-center mb-3">VIEW OUR WORK</h2>
+
                             <div class="portImage-container" style="background-color: #303030;">
                                 <div class="d-flex flex-column justify-content-center">
                                     <img src="assets/images/portfolio/10-02.webp" class="reveal" width="100%"
@@ -208,59 +210,127 @@
                     <div class="tab-pane fade " id="pills-mobile" role="tabpanel" aria-labelledby="pills-mobile-tab"
                         tabindex="0">
                         <div class="tab-boxs">
+                            <h2 style="color: #fff;" class="text-center mb-5">VIEW OUR WORK</h2>
                             <div class="portImage-container" style="background-color: #303030;">
                                 <div class="d-flex flex-wrap justify-content-center video-frames">
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1MLVs6CHDDGEMLSBfmKekLxBBTtI3q8ku/preview"
-                                        allow="autoplay" ></iframe>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1MLVs6CHDDGEMLSBfmKekLxBBTtI3q8ku/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1Jo2Yhv7fenA56s4_H-l433hJ2LfdWecH/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/15P9IM1yLf0YaAqERzEjUoR0jc_AvANgA/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1qyG2MXa6BiaiNRbPzmueswOOQoRV20NV/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/10LXqcfN7CuBR6O5dIVq3wwtva_cdnGCY/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1WcJWucRfNEeKD3KD9w9joadbEEebhj3g/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1d-EHqrC28kiUGHmT_rglP4C67K6BuKFJ/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1_JJsgBVpTubMYuG7D573YLEevyFieBbo/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1e370miy_cvhUPdarYovrv7kTeTd135Uy/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1eFY1m4IqQk3qGenRu52bx8aaMV6dMTiL/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1r02Omjz-Xfg3ezOibi1_VU9FHPejKl7S/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1dGnVkTrLPOND8K-eE5bb8aeybfSDIB9S/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/14O9bvrE6jpZ89Vg2z5VpfIEpuo2PLsTO/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
 
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1Jo2Yhv7fenA56s4_H-l433hJ2LfdWecH/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/15P9IM1yLf0YaAqERzEjUoR0jc_AvANgA/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1qyG2MXa6BiaiNRbPzmueswOOQoRV20NV/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/10LXqcfN7CuBR6O5dIVq3wwtva_cdnGCY/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1WcJWucRfNEeKD3KD9w9joadbEEebhj3g/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1d-EHqrC28kiUGHmT_rglP4C67K6BuKFJ/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1_JJsgBVpTubMYuG7D573YLEevyFieBbo/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1e370miy_cvhUPdarYovrv7kTeTd135Uy/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1eFY1m4IqQk3qGenRu52bx8aaMV6dMTiL/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1r02Omjz-Xfg3ezOibi1_VU9FHPejKl7S/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/1dGnVkTrLPOND8K-eE5bb8aeybfSDIB9S/preview"
-                                        allow="autoplay" ></iframe>
-
-                                    <iframe
-                                        src="https://drive.google.com/file/d/14O9bvrE6jpZ89Vg2z5VpfIEpuo2PLsTO/preview"
-                                        allow="autoplay" ></iframe>
                                 </div>
                             </div>
 
