--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Befhue - Expert Logo, Graphic, Packaging & Web Design Services in Coimbatore
     </title>
     <meta name="description" content="Befhue, Coimbatore's premier design studio, specializes in professional logo design, graphic design, packaging design, and web design. Transform your brand with creative solutions tailored to your goals."
@@ -264,7 +264,7 @@
                     <div class="testimonial mySwiper">
                         <div class="testi-content swiper-wrapper">
                             <div class="slide swiper-slide">
-                                <img src="assets/images/home/man1.jpg" alt="" class="image" />
+                                <img src="assets/images/testimonial/1.jpg" alt="" class="image" />
                                 <p>
                                     "Befhue transformed our brand with their creative designs. From logo concepts to marketing materials, every detail reflected professionalism and originality. Their team listened to our needs and delivered
                                      beyond our expectations. Our brand now stands out, thanks to Befhue!"
@@ -276,7 +276,7 @@
                                 </div>
                             </div>
                             <div class="slide swiper-slide">
-                                <img src="assets/images/home/man5.jpeg" alt="" class="image" />
+                                <img src="assets/images/testimonial/1.jpg" alt="" class="image" />
                                 <p>
                                     "The team at Befhue is incredible! They designed a stunning brochure and flyer for our business that perfectly captured our brand's personality. Their creativity and quick delivery set them apart. Highly recommended for businesses looking to make a strong visual impact!"
                                 </p>
@@ -287,7 +287,7 @@
                                 </div>
                             </div>
                             <div class="slide swiper-slide">
-                                <img src="assets/images/home/man3.jpg" alt="" class="image" />
+                                <img src="assets/images/testimonial/1.jpg" alt="" class="image" />
                                 <p>
                                     "Befhue redefined our visual identity with their innovative designs. Their expertise in crafting compelling business cards and promotional materials helped us leave a lasting impression on our clients. Professional, reliable, and truly talented!"
                                 </p>
@@ -306,7 +306,7 @@
                 <!-- JavaScript -->
             </div>
             <div class="testimonialsection-images">
-                <img src="assets/images/home/women.png" />
+                <img src="assets/images/testimonial/1.jpg" />
                 <hr>
             </div>
         </div>
