--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Creative Logo, Graphic, Packaging & Web Design Studio in Coimbatore | Befhue
     </title>
     <meta name="description" content="Befhue offers innovative logo design, graphic design, packaging design, and web design services in Coimbatore. Empower your brand with stunning, customized designs from our expert team.">
