--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>befhue
     </title>
     <meta name="description" content="Discover Befhue, a creative powerhouse specializing in innovative graphic design and video editing services. We craft visually stunning designs and compelling videos to elevate your brand, making your vision come to life. Partner with us for cutting-edge creativity and impactful storytelling.
