--- a/service.html
+++ b/service.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Professional Logo, Graphic, Packaging & Web Design Services in Coimbatore - Befhue
 
     </title>
