--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="service.html">Services</a></li>
-                    <li><a href="price.html">Pricing</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
 
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
