--- a/about.html
+++ b/about.html
@@ -131,7 +131,7 @@
         <div class="nav-overlay"></div>
 
         <div class="enquiry">
-            <a href="contact.html">Lets Talk</a>
+            <a href="contact.html">Get Quotes</a>
         </div>
         <button class="ham-1">
             <div class="h-1"></div>
