--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,7 @@
         <div class="nav-overlay"></div>
 
         <div class="enquiry">
-            <a href="contact.html">Lets Talk</a>
+            <a href="contact.html">Get Quotes</a>
         </div>
         <button class="ham-1">
             <div class="h-1"></div>
@@ -324,6 +324,33 @@
                                     <div class="iframe">
                                         <iframe
                                             src="https://drive.google.com/file/d/14O9bvrE6jpZ89Vg2z5VpfIEpuo2PLsTO/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1twmYAJz6lryKJSqHsHMtJN038t9DDLTm/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1fAn2_5gtPGTuW150Z2HD5Q9EkNmY1VU1/preview"
+                                            allow="autoplay"></iframe>
+                                        <div class="frame-content">
+                                            <span class="line"></span>
+                                            <span class="title-frame">Juoner</span>
+                                        </div>
+                                    </div>
+                                    <div class="iframe">
+                                        <iframe
+                                            src="https://drive.google.com/file/d/1gHSiuliZixcEzKMlxd3Lxdk580QBQw1e/preview"
                                             allow="autoplay"></iframe>
                                         <div class="frame-content">
                                             <span class="line"></span>
