--- a/portfolio.html
+++ b/portfolio.html
@@ -37,6 +37,27 @@
 <body>
     <div class="cursor-1"></div>
 
+    <!--///////////////////// Popup the Form start /////////////////////////-->
+
+    <section class="popup-form">
+        <div class="popup-container">
+
+            <button id="close" class="close-btn"><i class="fa-solid fa-xmark"></i></button>
+
+            <div class="popup-form-container">
+                <h2>Apply the Form</h2>
+                <form method="POST" onsubmit="return contact(event)">
+                    <input type="text" id="name" placeholder="Enter Your Name" required>
+                    <input type="email" id="email" placeholder="Enter Your Email" required>
+                    <input type="number" id="number" placeholder="Enter Your Mobile Number" required>
+                    <textarea rows="5" id="message" placeholder="Message" required></textarea>
+                    <button class="submit-btn" type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <!--///////////////// Popup the Form end//////////////////////////// -->
 
     <!-- Top of nav start -->
 
@@ -122,7 +143,7 @@
         <div class="nav-overlay"></div>
 
         <div class="enquiry">
-            <a href="contact.html">Get Quotes</a>
+             <a href="#">Get Quotes</a>
         </div>
         <button class="ham-1">
             <div class="h-1"></div>
@@ -563,6 +584,41 @@
 
     </script>
 
+<script>
+    function contact(event) {
+        // Prevent the default form submission behavior
+        event.preventDefault();
+
+        // Retrieve input values
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var number = document.getElementById("number").value;
+        var message = document.getElementById("message").value;
+
+        // Validate fields
+        if (!name || !email || !number || !message) {
+           
+            return false; // Prevent further action
+            alert("Enter All Fields");
+        }
+
+        // Format the message content
+        var formattedMessage = encodeURIComponent(
+            "Name: " + name + "\n" +
+            "Email: " + email + "\n" +
+            "Mobile Number: +" + number + "\n" +
+            "Message: " + message
+        );
+
+        // Construct the WhatsApp URL
+        var url = "https://wa.me/+919342470592?text=" + formattedMessage;
+
+        // Open the WhatsApp URL in a new tab/window
+        window.open(url, '_blank');
+
+        return false; // Prevent form submission
+    }
+</script>
 
 </body>
 
