--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,7 @@
 </head>
 
 <body>
+   
  <!-- Top of nav start -->
 
  <section class="top-nav">
@@ -120,7 +121,7 @@
     <div class="nav-overlay"></div>
 
     <div class="enquiry">
-        <a href="contact.html">Get Quotes</a>
+         <a href="#form">Get Quotes</a>
     </div>
     <button class="ham-1">
         <div class="h-1"></div>
@@ -210,7 +211,7 @@
         <img class="banner" src="assets/images/contact/Graphic-design.jpg" />
     </div>
 
-    <div class="contact-map-section">
+    <div class="contact-map-section" id="form">
         <div class="contact-map-container container">
             <div class="contact-map-boxs">
                 <!-- <iframe
