--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="nav-overlay"></div>
 
         <div class="enquiry">
-            <a href="contact.html">Get Quotes</a>
+            <a href="#">Get Quotes</a>
         </div>
         <button class="ham-1">
             <div class="h-1"></div>
