--- a/about.html
+++ b/about.html
@@ -51,12 +51,12 @@
             <button id="close" class="close-btn"><i class="fa-solid fa-xmark"></i></button>
 
             <div class="popup-form-container">
-                <h2>Apply the Form</h2>
+                <h2>What we offer you?</h2>
                 <form method="POST" onsubmit="return contact(event)">
                     <input type="text" id="name" placeholder="Enter Your Name" required>
                     <input type="email" id="email" placeholder="Enter Your Email" required>
-                    <input type="number" id="number" placeholder="Enter Your Mobile Number" required>
-                    <textarea rows="5" id="message" placeholder="Message" required></textarea>
+                    <input type="number" id="number" placeholder="Enter Your Contact Number" required>
+                    <textarea rows="6" id="message" placeholder="Message" required></textarea>
                     <button class="submit-btn" type="submit">Submit</button>
                 </form>
             </div>
@@ -151,7 +151,7 @@
         <div class="nav-overlay"></div>
 
         <div class="enquiry">
-             <a href="#">Get Quotes</a>
+             <a href="#">Get a Quote</a>
         </div>
         <button class="ham-1">
             <div class="h-1"></div>
@@ -498,6 +498,42 @@ var swiper = new Swiper(".mySwiper", {
 
         return false; // Prevent form submission
     }
+</script>
+
+<script>
+    //////////////////////// Form Popup /////////////////////////////////////////////
+
+// Select elements
+let popupBtn = document.querySelector('.enquiry');
+let popupBtn2 = document.querySelector('.enquiry2');
+let popupBtn3 = document.querySelector('.enquiry3');
+let popup = document.querySelector('.popup-form');
+let closeBtn = document.querySelector('.close-btn');
+// Check if the popup has already been shown
+
+// Show the popup only if it hasn't been shown before
+
+popupBtn.addEventListener("click", function () {
+
+  popup.style.scale = "1";
+  popup.style.opacity = "1"; // Show the popup
+  popup.classList.toggle('rot');
+  // if (popup.style.scale === "1") {
+  //   document.querySelector('.body').classList.toggle('blur'); 
+  // }; 
+});
+
+
+// Close button functionality
+closeBtn.addEventListener("click", function () {
+  popup.classList.toggle('rot');
+  popup.style.scale = "0"; // Hide the popup
+  popup.style.opacity = "0";
+
+});
+//////////////////////// Navbar /////////////////////
+
+
 </script>
 
 
