--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
     <div class="nav-overlay"></div>
 
     <div class="enquiry">
-         <a href="#form">Get Quotes</a>
+         <a href="#form">Get a Quote</a>
     </div>
     <button class="ham-1">
         <div class="h-1"></div>
