--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
 
                 <div class="about-academy-boxs">
                     <div class="programe-image">
-                        <img src="assets/images/home/1-01.png">
+                        <img src="assets/images/home/modern 1-01.png">
                         <div class="programe-image-card">
                             <h6>Baking Pastry</h6>
                             <p>Logo Design
@@ -561,10 +561,10 @@
     <!-- loop video start -->
     <div class="marquee-w">
         <div class="marquee">
-            <span>befhue. befhue. befhue. befhue.&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span></span>
         </div>
         <div class="marquee marquee2">
-            <span>befhue. befhue. befhue. befhue.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+            <span></span>
         </div>
     </div>
     <!-- loop video end  -->
