--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <div class="cursor-1"></div>
+    <div class="cursor-1 d-none d-lg-flex"></div>
 
     <!--///////////////////// Popup the Form start /////////////////////////-->
 
